fixed effective date placement on mobile and when drawer toggles

--- a/regulations/static/regulations/css/less/layout.less
+++ b/regulations/static/regulations/css/less/layout.less
@@ -207,6 +207,7 @@ TOC Header Navigation
     .header-main {
         &.close {
             margin-left: 40px;
+            width: 71.7%;
         }
     }
 }
